# AskThePaper

./: .gitignore  DOCKER_GUIDE.md  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  run_dev.sh
admin/: Dockerfile  REACT_FOR_BEGINNERS.md  index.html  nginx.conf  package-lock.json  package.json
admin/src/: App.jsx  api.js  index.css  main.jsx  main.md
admin/src/components/: ChunksModal.jsx  Navbar.jsx  PapersList.jsx  Sidebar.jsx  UploadModal.jsx
admin/src/pages/: Dashboard.jsx  Folders.jsx  Login.jsx  Settings.jsx  VisibilitySettings.jsx
app/: __init__.py  main.py
app/core/: __init__.py  config.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: chunking.md  chunking.py  embedding.md  embedding.py  evaluation.md  evaluation.py  llm.md  llm.py  main.md  main.py  prompts.md  prompts.py
backend/app/admin/: __init__.py  admin_router.md  main.md  router.py
backend/app/chat/: chat_router.md  router.py  witty.py
backend/app/core/: auth.py  config.py  database.md  database.py
backend/scripts/: seed_db.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: DebugPanel.jsx  SessionSidebar.jsx
frontend/src/pages/: ChatPage.jsx
